# safety-minder

./: db.sqlite3  manage.py  pyproject.toml
app_main_site/: apps.py  urls.py  views.py
app_main_site/templates/app_main_site/: base.html  home.html  profile.html  update_profile.html
app_main_site/templates/registration/: login.html  registration.html
app_users/: admin.py  forms.py  models.py
app_users/migrations/: 0001_initial.py  0002_alter_customuser_badge.py  0003_alter_customuser_username.py
project_safety_minder/: asgi.py  settings.py  urls.py  wsgi.py
