[tool.poetry]
name = "safety-minder"
version = "0.1.0"
description = ""
authors = ["daoolet-honeywell <daulet.khabidullin@honeywell.com>"]
readme = "README.md"
packages = [{include = "safety_minder"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
